@@ -1,3 +1,12 @@
+2003-10-09  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* config/linker-map.gnu: Make more *_type_info bits visible.
+	Move new/delete bits back into GLIBCXX space.
+
+	* include/bits/locale_classes.h: Move _M_id out of line, so that
+	locale::id::_S_highwater can be removed from the export list.
+	* src/locale.cc (locale::id::_M_id): Define.
+	
 2003-10-09  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* testsuite/lib/libstdc++.exp: Set LD_LIBRARY_PATH_64 for
